fix letter-spacing

--- a/css/features.css
+++ b/css/features.css
@@ -8,6 +8,7 @@
 }
 
 .features h3 {
+  color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
