--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,6 @@
   color: #4d5ae5;
 }
 
-footer p {
+.footer p {
   letter-spacing: 0.02em;
 }
