--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,11 @@
-.header nav {
+.page-nav .link {
   font-weight: 500;
   color: #434455;
 }
-.header nav:hover {
+.page-nav .link:hover {
   color: #404bbf;
 }
-.header nav:active {
+.page-nav .link:active {
   color: #404bbf;
 }
 .header-logo {
@@ -20,13 +20,14 @@
   color: #4d5ae5;
 }
 
-.header-address {
+.header-address .link {
   font-style: normal;
+  color: #434455;
 }
 
-.header-address:hover {
+.header-address .link:hover {
   color: #404bbf;
 }
-.header-address:active {
+.header-address .link:focus {
   color: #404bbf;
 }
