--- a/css/team.css
+++ b/css/team.css
@@ -7,7 +7,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .team li {
